<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_publisher</name>
  <version>0.0.0</version>
  <description>Test package for ros2 feaures</description>
  <maintainer email="kolaseirik@gmail.com">Eirik Kolås</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>example_msgs</depend>
  
  <exec_depend>ros2launch</exec_depend>

  <!-- gtest stuff -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
